--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="row pt-7 pb-7 justify">
                 <div class="col-7">
-                    <input type="email" placeholder="E-mail Address" class="border-bottom pt-1 pr-1 pb-1 pl-1 width-200 border-none border-bottom" >
+                    <input type="email" placeholder="E-mail Address" class="border-bottom pt-1 pr-1 pb-1 pl-1 width-200 border-bottom" >
                 </div>
                 <div class="col-5">
                     <input type="button" value="Get App" class="cursor text-white text-weight pt-1 pb-1 pl-1 pr-1 width-150 effect">
